--- a/Part2.ipynb
+++ b/Part2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8489a07c",
+   "id": "0e48188a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3263bae5",
+   "id": "bb3c9524",
    "metadata": {},
    "source": [
     "# Aims\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f1bfbd4",
+   "id": "472575fe",
    "metadata": {},
    "source": [
     "# Experimental method"
@@ -31,13 +31,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a690632",
+   "id": "d837166c",
    "metadata": {},
    "source": [
     "## Experimental set-up\n",
     "\n",
-    "- explain apparatus + role of each part\n",
-    "- Best method to aligh 1/2 WP to give maximum transmission at 0&deg;\n",
+    "1/2 WP IS MADE FOR THIS LASER! WOULDN'T WORK OTHERWISE!\n",
     "\n",
     "We use the same apparatus, adding the half waveplate (1/2 WP) between the polariser and the analyser, such that we have linearly polarised light incident on the 1/2 WP, and we can study the SOP which comes out of the 1/2 WP by rotating the analyser.\n",
     "\n",
@@ -46,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a1cd8b3",
+   "id": "483c33f9",
    "metadata": {},
    "source": [
     "## Measurements\n",
@@ -67,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7f6a313b",
+   "id": "b9a9012a",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f4cca17",
+   "id": "32aab272",
    "metadata": {},
    "source": [
     "Clearly here, the ratio between the two maximum output powers is one, especially when we take into account the errors. This means the two axes transmit the same amout of light. OTHER CONCLUSIONS???"
@@ -102,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e843902",
+   "id": "83ce5b67",
    "metadata": {},
    "source": [
     "Now, to find the effect of the 1/2 WP on the initial SOP, we find the minimum and maximum transmissions for a range of 1/2 WP angles by rotating the analyser around 360&deg;.\n",
@@ -122,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b90d2f42",
+   "id": "ed38ff8b",
    "metadata": {},
    "source": [
     "The angle of the analyser when the transmission is maximal is the angle of the SOP incident on the analyser (which is the whole point of the analyser). As the SOP incident to the 1/2 WP is at 0&deg;, we conclude that the 1/2 WP must make the polarisation rotate by twice its angle (ie the angle between the first transmission axis and the SOP). For example, for a 10 &deg; angle of the 1/2 WP, we get a final SOP of 20 &deg;. Further, from the 1st and last line of the table (1/2 WP angle of 0 and 90 &deg;), we see that, as the two transmission axes have the same power output, we get the same results.\n",
@@ -136,21 +135,21 @@
     "These are also not background subtracted.\n",
     "\n",
     "1/2 WP angle (&deg;) | output power 1 | output power 2\n",
-    ":--:|:---:|:---:|:---:\n",
-    "0|919|918\n",
-    "20|533|530\n",
-    "45|6|6\n",
-    "60|236|241\n",
-    "80|804|806\n",
-    "90|911|906\n",
-    "100|795|793\n",
-    "120|211|216\n",
-    "135|7|6\n",
-    "140|40|44\n",
-    "160|566|561\n",
-    "180|911|911\n",
+    ":--:|:---:|:---:\n",
+    "0   | 919 | 918\n",
+    "20  | 533 | 530\n",
+    "45  | 6   | 6\n",
+    "60  | 236 | 241\n",
+    "80  | 804 | 806\n",
+    "90  | 911 | 906\n",
+    "100 | 795 | 793\n",
+    "120 | 211 | 216\n",
+    "135 | 7   | 6\n",
+    "140 | 40  | 44\n",
+    "160 | 566 | 561\n",
+    "180 | 911 | 911\n",
     "\n",
-    "\n",
+    "COMMENT!!!!!!!\n",
     "\n",
     "SHOULD FIND MALUS LAW DEPENDENT ON 2THETA???\n",
     "ADD SMALL DISCUSSION\n",
@@ -159,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20004ca7",
+   "id": "f6aae77d",
    "metadata": {},
    "source": [
     "# Data analysis"
@@ -167,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f51dd428",
+   "id": "1771df62",
    "metadata": {},
    "source": [
     "# Results"
@@ -176,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63912adb",
+   "id": "b8b17089",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -184,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a87af3c",
+   "id": "bdc4e26a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -192,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dd80e9a",
+   "id": "ee851135",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -200,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e63e4e0",
+   "id": "ae233d29",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -208,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b412a1ae",
+   "id": "d8399bee",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -216,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3073eabd",
+   "id": "67ff75f5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -224,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a30db475",
+   "id": "d528fdf5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -232,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67058fb4",
+   "id": "841dcc1b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -254,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
