--- a/Part3.ipynb
+++ b/Part3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6bfa71a5",
+   "id": "c11acf43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bdf4360",
+   "id": "72ba1052",
    "metadata": {},
    "source": [
     "# Aims\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c9e5eb9",
+   "id": "0005c6e7",
    "metadata": {},
    "source": [
     "# Investigation of a 1/4 WP"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf4c5766",
+   "id": "7e83b69c",
    "metadata": {},
    "source": [
     "## Aims\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1079ea8c",
+   "id": "b46827f4",
    "metadata": {},
    "source": [
     "## Experimental method"
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5316561",
+   "id": "e97fff2d",
    "metadata": {},
    "source": [
     "### Experimental set-up\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7af085aa",
+   "id": "ad43ef81",
    "metadata": {},
    "source": [
     "### Measurements\n",
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f04bd4d8",
+   "id": "e0f503a9",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecadb7ae",
+   "id": "fa498b9e",
    "metadata": {},
    "source": [
     "We can see the ratio between the two will be very close to one, but not exactly, and their error bounds do not overlap. The two axes transmit a slightly different amount of light, but this is very small."
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ef4ad34",
+   "id": "2c0ba482",
    "metadata": {},
    "source": [
     "## Data analysis"
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9bf7e99",
+   "id": "8281a01b",
    "metadata": {},
    "source": [
     "## Results"
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e63f325",
+   "id": "7988673d",
    "metadata": {},
    "source": [
     "# Creation of 45&deg; SOP"
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53d3c488",
+   "id": "f8bccf93",
    "metadata": {},
    "source": [
     "## Aims"
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eecd3cae",
+   "id": "c73efd4b",
    "metadata": {},
    "source": [
     "## Experimental method"
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eafcc6a9",
+   "id": "6b6f05ee",
    "metadata": {},
    "source": [
     "### Experimental set-up\n",
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09f5b872",
+   "id": "00ba8390",
    "metadata": {},
    "source": [
     "### Measurements\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b77d179a",
+   "id": "15851357",
    "metadata": {},
    "source": [
     "## Data Analysis"
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "181dbe63",
+   "id": "a351eab3",
    "metadata": {},
    "source": [
     "## Results"
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1ff2a41",
+   "id": "1a01b5b2",
    "metadata": {},
    "source": [
     "# Optional part (NOT DONE YET)"
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d8e5903",
+   "id": "253d53c5",
    "metadata": {},
    "source": [
     "## Aims"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f4100ea",
+   "id": "adc70d24",
    "metadata": {},
    "source": [
     "## Experimental method"
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e89daf2",
+   "id": "4da4ca77",
    "metadata": {},
    "source": [
     "### Set-up\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "862b804f",
+   "id": "398dc324",
    "metadata": {},
    "source": [
     "### Measurements\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1b5b937",
+   "id": "9a6fdf43",
    "metadata": {},
    "source": [
     "## Results"
@@ -269,27 +269,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8e3d498",
+   "id": "ea696aff",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "dc1843b7",
+   "id": "f4ce60bf",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa5869e7",
+   "id": "a46c7db2",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b3d4b1ec",
+   "id": "8db5fe89",
    "metadata": {},
    "source": [
     "# Investigation of 2 1/4 WP in series"
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0af759bd",
+   "id": "20341f4c",
    "metadata": {},
    "source": [
     "## Aims"
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3972e4b9",
+   "id": "b20570ab",
    "metadata": {},
    "source": [
     "## Experimental method"
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3900450e",
+   "id": "534e6c38",
    "metadata": {},
    "source": [
     "### Experimental set-up\n",
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40bd24a1",
+   "id": "00398e3d",
    "metadata": {},
    "source": [
     "### Measurements\n",
@@ -341,7 +341,7 @@
     "90   | 180 | 0, 180   | 809, 808 | 90,  270 | 3, 3\n",
     "0    | 0   | 0, 180   | 819, 812 | 90,  270 | 3, 3\n",
     "\n",
-    "Note that these are not background subtracted, and that the 22.5\\deg; angle was obtained using the same method as described above.\n",
+    "Note that these are not background subtracted, and that the 22.5&deg; angle was obtained using the same method as described above.\n",
     "\n",
     "We see here that the two 1/4 WPs in series have the effect of one 1/2 WP, ie the initial and final SOPs are mirror images of eachother: the initial SOP was flipped along the x-axis (as, in general, $-\\theta = 360-\\theta$) . WHY PHYSICALLY!!!\n",
     "\n",
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09a59297",
+   "id": "f2389659",
    "metadata": {},
    "source": [
     "## Data analysis"
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "026cc754",
+   "id": "b7acb261",
    "metadata": {},
    "source": [
     "## Results"
